fix scrollbar at manangeQuiz module

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -13,6 +13,8 @@
 
         }
         .admin-main{
+            height:calc(100vh - 50px);
+            margin-bottom: 10px;
             .user-pagination{
                 display: flex;
                 justify-content: center;
